--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\Teban\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
+    "python.pythonPath": "C:\\Users\\Teban\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
+    "cmake.configureOnOpen": true
 }
