--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -5,8 +5,8 @@ cmake_minimum_required(VERSION 2.8)
 set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/cmake_config/generic-avr-gcc.cmake")
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
 
+project(AUTOMATIC_FARM)
 # Name your project
-project(FIRMWARE)
 set(AVR_MCU atmega16)
 
 add_subdirectory(libraries/drivers/spi)
