Change project structure, add hardware definition for atmega16: currently just nrf24

--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -10,5 +10,5 @@ project(AUTOMATIC_FARM)
 set(AVR_MCU atmega16)
 
 add_subdirectory(libraries/drivers/spi)
-add_subdirectory(libraries/drivers/nrf24)
-add_subdirectory(firmware/bootloader)
+add_subdirectory(libraries/modules/nrf24)
+add_subdirectory(firmware)
