Add spi_hw file for atmega16; also strip down the spi driver

--- a/software/libraries/drivers/spi/CMakeLists.txt
+++ b/software/libraries/drivers/spi/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/../../../cmake_config/generic-avr-
 project(SPI)
 
 include_directories(inc)
+include_directories(./../../hardware/${AVR_MCU})
 avr_add_library(spi src/spi.c)
 
 
