Redefine the ISR routines for nrf24; remove F_CPU defines, this is handled by cmake files now; add uart driver and uart_hw for atmega16

--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -8,8 +8,19 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
 project(AUTOMATIC_FARM)
 # Name your project
 set(AVR_MCU atmega16)
+set(MCU_FREQ 8000000UL)
 
+#generate the driver headers
 add_subdirectory(libraries/hardware/${AVR_MCU})
+
+#compile the drivers
 add_subdirectory(libraries/drivers/spi)
+add_subdirectory(libraries/drivers/uart)
+
+#compile the libs modules
 add_subdirectory(libraries/modules/nrf24)
+
+#compile the firmware
 add_subdirectory(firmware)
+
+#TODO: compile the application
