Add e2p driver and e2p layout

--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -16,6 +16,7 @@ add_subdirectory(libraries/hardware/${AVR_MCU})
 #compile the drivers
 add_subdirectory(libraries/drivers/spi)
 add_subdirectory(libraries/drivers/uart)
+add_subdirectory(libraries/drivers/e2p)
 
 #compile the libs modules
 add_subdirectory(libraries/modules/nrf24)
