--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -17,6 +17,7 @@ add_subdirectory(libraries/hardware/${AVR_MCU})
 add_subdirectory(libraries/drivers/spi)
 add_subdirectory(libraries/drivers/uart)
 add_subdirectory(libraries/drivers/e2p)
+add_subdirectory(libraries/drivers/flash)
 
 #compile the libs modules
 add_subdirectory(libraries/modules/nrf24)
