Add application forlder and configure cmake

--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -28,4 +28,5 @@ add_subdirectory(firmware)
 #compile the programmer sw
 add_subdirectory(programmer)
 
-#TODO: compile the application
+#compile the application
+add_subdirectory(application)
