Avr cmake support code (#11)
* Add the first version of CMake config

* Remove CHACHE arg from cmakelist - this lead to some errors

* Add top CMakeLists file

* Simplfy Cmake configuration

* Add script for toolchain setup

* GIT:Ignore build & toolchain directories

* Change project structure, add hardware definition for atmega16: currently just nrf24

* Add new rule for .lss file

* Install firmware hex file to assets in software; add assets folder to gitignore; additional clean command for .map file

* Add spi_hw file for atmega16; also strip down the spi driver

* Strip down the nrf24 module and move the interrupt / hw functionality to atmega16 hw

* Simplify and add hw definitions in radio shared file

* Add flash_layout configuration for atmega16 - configure all other projects to use this

* Remove visualstudio metadata from project - added by mistake

* Add .vscode to gitignore

* Redefine the ISR routines for nrf24; remove F_CPU defines, this is handled by cmake files now; add uart driver and uart_hw for atmega16

* Add programmer application to project

* Change flashing tool to be used with Linux; also compiel crc16 for linux

* Check output file in crc16 before it is closed - this lead to segfault in linux; add linux output

* Check platform in flashing script - it should work on win & linux; move flashing tool in tools

* Add support to extract the NRF24 image from firmware.elf file

* Add NRF24 hex file alongside the programmer hex file as an extended programmer image

* Add e2p driver and e2p layout

* Modify firmware project to use the e2p driver / layout

* Modify MEMORY project to support the e2p layout

* Change eeprom generation file options

* Add newest generated file for flash layout

* Remove the EOF from programmer hex when this is concatenated with nrf24, due that value the programmer fails to write the to hex on mcu's flash memory

* Move the memory sections in flash_layout.h file and

--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -6,9 +6,10 @@ set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/cmake_config/generic-avr-gcc.cmake
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
 
 project(AUTOMATIC_FARM)
-# Name your project
-set(AVR_MCU atmega16)
-set(MCU_FREQ 8000000UL)
+
+
+include(CheckArguments.cmake)
+
 
 #generate the driver headers
 add_subdirectory(libraries/hardware/${AVR_MCU})
@@ -28,5 +29,7 @@ add_subdirectory(firmware)
 #compile the programmer sw
 add_subdirectory(programmer)
 
+
 #compile the application
 add_subdirectory(application)
+
