--- a/software/firmware/CMakeLists.txt
+++ b/software/firmware/CMakeLists.txt
@@ -28,5 +28,6 @@ install(
     FILES ${CMAKE_CURRENT_BINARY_DIR}/firmware.hex
           ${CMAKE_CURRENT_BINARY_DIR}/firmware_eep.hex
           ${CMAKE_CURRENT_BINARY_DIR}/nrf24.hex
-    DESTINATION ${CMAKE_SOURCE_DIR}/assets/firmware
+    DESTINATION ${CMAKE_SOURCE_DIR}/assets/${AVR_MCU}/firmware
+
 )
