--- a/software/programmer/CMakeLists.txt
+++ b/software/programmer/CMakeLists.txt
@@ -34,5 +34,6 @@ set_property(DIRECTORY APPEND
 install(
     FILES ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_NAME}.hex
           ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_NAME}${TARGET_EXT_NAME}
-    DESTINATION ${CMAKE_SOURCE_DIR}/assets/${TARGET_NAME}
+    DESTINATION ${CMAKE_SOURCE_DIR}/assets/${AVR_MCU}/${TARGET_NAME}
+
 )
