--- a/software/firmware/CMakeLists.txt
+++ b/software/firmware/CMakeLists.txt
@@ -12,15 +12,23 @@ project(FIRMWARE)
 #extract the NRF24 image
 set(NRF24_IMAGE True)
 
-include_directories(./bootloader/inc)
-include_directories(./../libraries/modules/nrf24/inc)
-include_directories(./../libraries/drivers/e2p/inc)
-include_directories(./../libraries/drivers/flash/inc)
-include_directories(./../libraries/hardware/${AVR_MCU})
+set(HEADER_INC
+    ./bootloader/inc
+    ./../libraries/drivers/e2p/inc
+    ./../libraries/drivers/flash/inc
+    ./../libraries/modules/nrf24/inc
+    ./../libraries/hardware/${AVR_MCU}
+)
+include_directories(${HEADER_INC})
 
+#generate the eep file
 set(PROGRAM_EEPROM True)
 
-avr_add_executable(firmware ./bootloader/src/main.c ./bootloader/src/WriteApp.c)
+set(SOURCE_FILES
+    ./bootloader/src/main.c
+    ./bootloader/src/WriteApp.c
+)
+avr_add_executable(firmware ${SOURCE_FILES})
 target_link_libraries(firmware.elf nrf24 e2p flash)
 
 #install binaries
