--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory(libraries/drivers/spi)
 add_subdirectory(libraries/drivers/uart)
 add_subdirectory(libraries/drivers/e2p)
 add_subdirectory(libraries/drivers/flash)
+add_subdirectory(libraries/drivers/timer)
 
 #compile the libs modules
 add_subdirectory(libraries/modules/nrf24)
