Add testing env for timer / timer_hw modules

--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -34,3 +34,6 @@ add_subdirectory(programmer)
 #compile the application
 add_subdirectory(application)
 
+#compile the testbench env
+add_subdirectory(testing/timer_testbench)
+
