Add tiny-AES external project as an impoerted static library

--- a/software/external/CMakeLists.txt
+++ b/software/external/CMakeLists.txt
@@ -15,43 +15,33 @@
 # You should have received a copy of the GNU General Public License
 # along with automatic-farm.  If not, see <http://www.gnu.org/licenses/>.
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0)
+
+include(${CMAKE_ROOT}/Modules/ExternalProject.cmake)
 
 set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/cmake_config/generic-avr-gcc.cmake")
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
 
-project(AUTOMATIC_FARM)
+project(EXTERNAL)
 
 
-include(CheckArguments.cmake)
+if(ENABLE_AES)
+#add AES external project
+set(AES_REPO "https://github.com/plan-zero/tiny-AES-c.git")
+set(aec_DESTDIR ${CMAKE_CURRENT_BINARY_DIR}/lib/)
+get_filename_component(TOOLCHAIN_ABSOLUTE_PATH "./../cmake_config/generic-avr-gcc.cmake" ABSOLUTE)
+ExternalProject_Add(AES_EXT
+            GIT_REPOSITORY    ${AES_REPO}
+            GIT_TAG           master
+            CMAKE_ARGS -DCMAKE_TOOLCHAIN_FILE=${TOOLCHAIN_ABSOLUTE_PATH} -DAVR_MCU=${AVR_MCU}
+            INSTALL_COMMAND cmake -E echo "Skipping install step."
+)
+ExternalProject_Get_Property(AES_EXT binary_dir)
+message(WARNING "${binary_dir}")
 
-#download external dependencies
-add_subdirectory(external)
+add_library(tiny-aes STATIC IMPORTED GLOBAL)
+set_target_properties(tiny-aes PROPERTIES 
+        IMPORTED_LOCATION ${binary_dir}/libtiny-aes.a
+)
 
-#generate the driver headers
-add_subdirectory(libraries/hardware/${AVR_MCU})
-
-#compile the drivers
-add_subdirectory(libraries/drivers/spi)
-add_subdirectory(libraries/drivers/uart)
-add_subdirectory(libraries/drivers/e2p)
-add_subdirectory(libraries/drivers/flash)
-add_subdirectory(libraries/drivers/timer)
-add_subdirectory(libraries/drivers/wdg)
-
-#compile the libs modules
-add_subdirectory(libraries/modules/nrf24)
-
-#compile the firmware
-add_subdirectory(firmware)
-
-#compile the programmer sw
-add_subdirectory(programmer)
-
-
-#compile the application
-add_subdirectory(application)
-
-#compile the testbench env
-add_subdirectory(testing/timer_testbench)
-
+endif()
