--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -28,6 +28,11 @@ include(CheckArguments.cmake)
 #download external dependencies
 add_subdirectory(external)
 
+if(ENABLE_AES)
+add_subdirectory(external/aes)
+add_subdirectory(testing/aes_testbench)
+endif()
+
 #generate the driver headers
 add_subdirectory(libraries/hardware/${AVR_MCU})
 
@@ -54,5 +59,5 @@ add_subdirectory(application)
 
 #compile the testbench env
 add_subdirectory(testing/timer_testbench)
-add_subdirectory(testing/aes_testbench)
+
 
