Timer integration with scheduler (#29)
* first version

* Few hot fixes for timer module & app

* Add scheduler testing task for 1ms - used just to measure the task accuracy

* Add a task simulator - it could be useful at some point

* Implemented timer

* Fix timer bug

* Scheduler add task interface (#27)

* Modify the scheduler to allow to add tasks at runtime

* Add scheduler APIs in public header; move testing functions to main application

* Added custom interval tasks and alarms

* made the alarm function global

* Fixed alarm and custom timer

Co-authored-by: adrianteban <teban.adrian@yahoo.com>

--- a/software/application/CMakeLists.txt
+++ b/software/application/CMakeLists.txt
@@ -22,12 +22,19 @@ set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/../cmake_config/generic-avr-gcc.cm
 # Name your project
 project(APP)
 
+if(TASK_TEST)
+    add_definitions(-DENABLE_TASK_TEST)
+endif()
+
 set(HEADER_INC
     ./Scheduler
     ./Abstractization/Sensors/Humidity
     ./Abstractization/Sensors/Light
     ./Abstractization/Actuators/Relay
     ./Abstractization/Actuators/Valve
+    ./../libraries/drivers/timer/inc
+    ./../libraries/drivers/uart/inc
+    ./../libraries/hardware/${AVR_MCU}
 )
 include_directories(${HEADER_INC})
 
@@ -39,7 +46,7 @@ set(SOURCE_FILES
 )
 avr_add_executable(app ${SOURCE_FILES})
 
-target_link_libraries(app.elf nrf24_api uart)
+target_link_libraries(app.elf nrf24_api uart timer)
 
 #install binaries
 install(
