Remove the calibration form system-timer; Add ping command in programmer

--- a/software/programmer/CMakeLists.txt
+++ b/software/programmer/CMakeLists.txt
@@ -27,7 +27,9 @@ set(TARGET_EXT_NAME _ext.hex)
 
 set(HEADER_INC
     ./../libraries/modules/nrf24/inc
+    ./../libraries/modules/system-timer/inc
     ./../libraries/drivers/uart/inc
+    ./../libraries/hardware/${AVR_MCU}
 )
 include_directories(${HEADER_INC})
 
@@ -37,7 +39,7 @@ set (SOURCE_FILES
 avr_add_executable(${TARGET_NAME} ${SOURCE_FILES})
 
 #link target with libraries
-target_link_libraries(${TARGET_NAME}.elf nrf24_api uart)
+target_link_libraries(${TARGET_NAME}.elf nrf24_api uart system-timer)
 
 #set postbuild command to concatenate programmer with nrf24
 add_custom_command(TARGET programmer POST_BUILD
