Add network definitions; modify the pairing procedure

--- a/software/application/CMakeLists.txt
+++ b/software/application/CMakeLists.txt
@@ -50,6 +50,7 @@ set(SOURCE_FILES
     ./Abstractization/Sensors/Humidity/Humidity.c
     ./Communication/Communication.c
     ./Communication/radio_link.c
+    ./Communication/network_def.c
     ./SwOta/ota.c
 )
 avr_add_executable(app ${SOURCE_FILES})
